force-app/main/default/objects/Quote__c/fields/Additional_Fees__c.field-meta.xml
<CustomField>
    <fullName>Additional_Fees__c</fullName>
    <inlineHelpText>This is where you will track additional fees for the Quote.</inlineHelpText>
    <label>Additional Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>