force-app/main/default/objects/Quote__c/fields/Amount_Of_Days_Passed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Of_Days_Passed__c</fullName>
    <description>Assigns group to quote based on number of days open</description>
    <formula>IF( Days_Open__c  &gt;= 0 &amp;&amp;  Days_Open__c  &lt;= 6, 1,
IF( Days_Open__c  &gt; 6 &amp;&amp;  Days_Open__c  &lt;= 16, 2,
IF( Days_Open__c  &gt; 15 &amp;&amp;  Days_Open__c  &lt;= 31, 3,
IF( Days_Open__c  &gt; 31 &amp;&amp;  Days_Open__c  &lt;= 60, 4,
IF( Days_Open__c  &gt; 60 &amp;&amp;  Days_Open__c  &lt;= 90, 5,
0)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Of Days Passed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>