force-app/main/default/objects/Quote__c/fields/Auto_Number1__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number1__c</fullName>
    <label>Quote # (Auto-Gen)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>