force-app/main/default/objects/Quote__c/fields/Bill_of_Material__c.field-meta.xml
<CustomField>
    <fullName>Bill_of_Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill of Material</label>
    <referenceTo>Project_Selection_Sheet_Takeoff__c</referenceTo>
    <relationshipLabel>BT Quotes</relationshipLabel>
    <relationshipName>BT_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>