force-app/main/default/objects/Quote__c/fields/Bill_To_County__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_County__c</fullName>
    <label>Bill To County</label>
    <length>255</length>
    <type>Text</type>
</CustomField>