force-app/main/default/objects/Quote__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>BT Quotes</relationshipLabel>
    <relationshipName>BT_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>