force-app/main/default/objects/Quote__c/fields/Date_Rejected_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Rejected_by_Customer__c</fullName>
    <description>Day quote was rejected by customer</description>
    <inlineHelpText>Date the Quote was rejected by the Customer.</inlineHelpText>
    <label>Date Rejected by Customer</label>
    <type>DateTime</type>
</CustomField>