force-app/main/default/objects/Quote__c/fields/Date_Valid_Through__c.field-meta.xml
<CustomField>
    <fullName>Date_Valid_Through__c</fullName>
    <label>Date Valid Through</label>
    <type>Date</type>
</CustomField>