force-app/main/default/objects/Quote__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <formula>IF(ISBLANK(Date_Accepted_by_Customer__c),
    IF(ISBLANK(Date_Rejected_by_Customer__c),
        IF(ISBLANK(Date_Sent_To_Customer__c), 0, ROUND(TODAY() - Date_Sent_To_Customer__c, 0)),
        ROUND(Date_Rejected_by_Customer__c - DATETIMEVALUE(Date_Sent_To_Customer__c), 0)
    ),
    ROUND(Date_Accepted_by_Customer__c - DATETIMEVALUE(Date_Sent_To_Customer__c), 0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>