force-app/main/default/objects/Quote__c/fields/Days_Open_Group__c.field-meta.xml
<CustomField>
    <fullName>Days_Open_Group__c</fullName>
    <description>Groups quotes based on amount of days open</description>
    <formula>IF(FLOOR(Days_Open__c) &gt;= 0 &amp;&amp; FLOOR(Days_Open__c) &lt;= 06, &quot;0-6 Days&quot;,
    IF(FLOOR(Days_Open__c) &gt; 06 &amp;&amp; FLOOR(Days_Open__c) &lt;= 20, &quot;07-20 Days&quot;,
        IF(FLOOR(Days_Open__c) &gt; 20 &amp;&amp; FLOOR(Days_Open__c) &lt;= 50, &quot;21-50 Days&quot;,
                    IF(Days_Open__c &gt; 50, &quot;Over 50 Days&quot;, &quot;Unknown&quot;)
                )
            )
        )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open Group</label>
    <type>Text</type>
</CustomField>