force-app/main/default/objects/Quote__c/fields/Days_Open_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Days_Open_Group_Number__c</fullName>
    <formula>IF(ISBLANK(Days_Open__c), 0,
    IF(Days_Open__c &lt;= 6, 1,
        IF(Days_Open__c &lt;= 16, 2,
            IF(Days_Open__c &lt;= 31, 3,
                IF(Days_Open__c &lt;= 60, 4,
                    IF(Days_Open__c &lt;= 90, 5, 6)
                )
            )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open Group Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>