force-app/main/default/objects/Quote__c/fields/Days_Passed__c.field-meta.xml
<CustomField>
    <fullName>Days_Passed__c</fullName>
    <label>Days Passed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>