force-app/main/default/objects/Quote__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <formula>Subtotal__c *   Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Discount % * Subtotal</inlineHelpText>
    <label>Discount Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>