force-app/main/default/objects/Quote__c/fields/Division_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Division_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division</label>
    <referenceTo>Division__c</referenceTo>
    <relationshipLabel>BT Quotes</relationshipLabel>
    <relationshipName>BT_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>