force-app/main/default/objects/Quote__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <formula>(Total__c + ( Total__c  *  Tax__c )) +  Shipping_and_Handling__c +  Additional_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>SubTotal Amount with Tax and Shipping &amp; Handling.</inlineHelpText>
    <label>Total Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>