force-app/main/default/objects/Quote__c/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <formula>/*(buildertek__Net_Total_Price__c -  buildertek__Total_Costs__c )/buildertek__Net_Total_Price__c*/

( Grand_Total__c  -  Total_Costs__c) /   Grand_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Gross Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>