force-app/main/default/objects/Quote__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <description>Depending on how many days the quote has been opened, the quote will be assigned a number</description>
    <formula>IF( Days_Open__c  &gt;= 0 &amp;&amp;  Days_Open__c  &lt;= 6, 1,
IF( Days_Open__c  &gt; 6 &amp;&amp;  Days_Open__c  &lt;= 16, 2,
IF( Days_Open__c  &gt; 15 &amp;&amp;  Days_Open__c  &lt;= 31, 3,
IF( Days_Open__c  &gt; 31 &amp;&amp;  Days_Open__c  &lt;= 60, 4,
IF( Days_Open__c  &gt; 60 &amp;&amp;  Days_Open__c  &lt;= 90, 5,
6)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>