force-app/main/default/objects/Quote__c/fields/Margin_to_Markup__c.field-meta.xml
<CustomField>
    <fullName>Margin_to_Markup__c</fullName>
    <formula>( (Profit_Margin__c /(1-Profit_Margin__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin to Markup</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>