force-app/main/default/objects/Quote__c/fields/Markup_Amount__c.field-meta.xml
<CustomField>
    <fullName>Markup_Amount__c</fullName>
    <formula>(Subtotal__c  -  Discount_Amount__c ) *  Markup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>(Subtotal - Discount ($) ) * Markup (%))</inlineHelpText>
    <label>Markup Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>