force-app/main/default/objects/Quote__c/fields/Percent_of_Total_Quote__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Total_Quote__c</fullName>
    <formula>1 /  Total_Quotes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent of Total Quote</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>