force-app/main/default/objects/Quote__c/fields/Projected_Profit__c.field-meta.xml
<CustomField>
    <fullName>Projected_Profit__c</fullName>
    <formula>Grand_Total__c - (  Tax_Amount__c +  Total_Costs__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total minus Total Costs</inlineHelpText>
    <label>Projected Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>