force-app/main/default/objects/Quote__c/fields/Quote_Line_Grouping_Fields__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Grouping_Fields__c</fullName>
    <label>Quote Line Grouping Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>