force-app/main/default/objects/Quote__c/fields/Quote_Name_Version__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name_Version__c</fullName>
    <formula>Name +  &apos; &apos; + Version_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Name &amp; Version</label>
    <type>Text</type>
</CustomField>