force-app/main/default/objects/Quote__c/fields/Quote_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Number__c</fullName>
    <formula>/*buildertek__Project__r.buildertek__Auto_Number__c &amp;&apos;-&apos;&amp;  buildertek__Auto_Number1__c*/

IF(ISBLANK(Project__r.Auto_Number__c), Auto_Number1__c, Project__r.Auto_Number__c &amp;&apos;-&apos;&amp;  Auto_Number1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote # (Project)</label>
    <type>Text</type>
</CustomField>