force-app/main/default/objects/Quote__c/fields/Schedule_of_Values__c.field-meta.xml
<CustomField>
    <fullName>Schedule_of_Values__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule of Values</label>
    <referenceTo>Schedule_of_Values__c</referenceTo>
    <relationshipLabel>BT Quotes</relationshipLabel>
    <relationshipName>BT_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>