force-app/main/default/objects/Quote__c/fields/Ship_To_Country__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Country__c</fullName>
    <label>Ship To Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
                <default>true</default>
                <label>CA</label>
            </value>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>