force-app/main/default/objects/Quote__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospecting</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft - Cost Sheet</label>
            </value>
            <value>
                <fullName>Ready for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Customer Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
                <isActive>false</isActive>
                <label>Accepted</label>
            </value>
            <value>
                <fullName>Delivered</fullName>
                <isActive>false</isActive>
                <label>Delivered</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>