force-app/main/default/objects/Quote__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <inlineHelpText>Rollup of the Total Sales Price field on the Quote Lines.</inlineHelpText>
    <label>Subtotal</label>
    <summarizedField>Quote_Item__c.Net_Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Quote_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Accept</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>