force-app/main/default/objects/Quote__c/fields/Total_Quotes__c.field-meta.xml
<CustomField>
    <fullName>Total_Quotes__c</fullName>
    <label>Total Quotes</label>
    <summaryForeignKey>Quote_Item__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>