force-app/main/default/objects/Quote__c/recordTypes/Existing_Quote.recordType-meta.xml
<RecordType>
    <fullName>Existing_Quote</fullName>
    <active>true</active>
    <label>Existing Quote</label>
</RecordType>