force-app/main/default/objects/Quote__c/validationRules/Date_Accepted_greater_than_Date_Sent.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Accepted_greater_than_Date_Sent</fullName>
    <active>true</active>
    <errorConditionFormula>(DATEVALUE(Date_Accepted_by_Customer__c)&lt; Date_Sent_To_Customer__c )</errorConditionFormula>
    <errorDisplayField>Date_Accepted_by_Customer__c</errorDisplayField>
    <errorMessage>Date Accepted should be either equal to or greater than Date sent</errorMessage>
</ValidationRule>