force-app/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Auto_Number__c</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Project__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Grand_Total__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Aging__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Date_Accepted_by_Customer__c</columns>
    <columns>Date_Sent_To_Customer__c</columns>
    <columns>Date_Rejected_by_Customer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>